style: fix aggressive word breaking and heading font sizes on mobile

--- a/ai-in-mining-blog/src/styles/global.css
+++ b/ai-in-mining-blog/src/styles/global.css
@@ -52,6 +52,9 @@ h6 {
 	margin: 0 0 0.5rem 0;
 	color: rgb(var(--black));
 	line-height: 1.2;
+	overflow-wrap: normal;
+	word-wrap: normal;
+	word-break: normal;
 }
 h1 {
 	font-size: 3.052em;
@@ -128,6 +131,18 @@ hr {
 	}
 	main {
 		padding: 1em;
+	}
+	h1 {
+		font-size: 2.2em;
+	}
+	h2 {
+		font-size: 1.8em;
+	}
+	h3 {
+		font-size: 1.5em;
+	}
+	h4 {
+		font-size: 1.3em;
 	}
 }
 
